--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studium",
+  "name": "noctua",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,10 +11,10 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
-    "express": "~4.16.1",
+    "express": "^4.19.2",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
     "jose": "^5.1.1",
     "mongoose": "^8.0.0",
     "morgan": "~1.9.1",
@@ -22,5 +22,10 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "description": "Para lanzar un proyecto de API backend usando MongoDB, se comienza instalando yarn y las dependencias necesarias como express y nodemon para la gestión del servidor.",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
